--- a/etch-a-sketch/package.json
+++ b/etch-a-sketch/package.json
@@ -4,6 +4,7 @@
     "@babel/preset-env": "^7.18.9",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "html-to-image": "^1.9.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
@@ -26,6 +27,7 @@
     "colorette": "^2.0.19",
     "commander": "^2.20.3",
     "cross-spawn": "^7.0.3",
+    "downloadjs": "^1.4.7",
     "electron-to-chromium": "^1.4.204",
     "enhanced-resolve": "^5.10.0",
     "envinfo": "^7.8.1",
