--- a/calculator/package.json
+++ b/calculator/package.json
@@ -11,7 +11,7 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   },
-  "name": "etch-a-sketch",
+  "name": "calculator",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
